--- a/Blogs.Jhray/Shared/NavMenu.razor
+++ b/Blogs.Jhray/Shared/NavMenu.razor
@@ -1,22 +1,17 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">Blogs</a>
-    <button @onclick="@(() =>
-                        {
-                            ToggleNavMenu();
-                            OnCollapse.InvokeAsync(NavMenuCssClass);
-                        })"><span class="oi oi-chevron-right"></span></button>
 </div>
 
 <div>
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span>
+                <span class="oi oi-home" aria-hidden="true"></span>Blogs
             </NavLink>
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-target" aria-hidden="true"></span>
+                <span class="oi oi-dollar" aria-hidden="true"></span>Memes
             </NavLink>
         </li>
     </ul>
@@ -24,13 +19,4 @@
 
 @code {
 
-    [Parameter] public EventCallback<string> OnCollapse { get; set; }
-    private bool collapseNavMenu = true;
-
-    private string NavMenuCssClass => collapseNavMenu ? null : "collapse";
-
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
 }
