--- a/Blogs.Jhray/Pages/_Host.cshtml
+++ b/Blogs.Jhray/Pages/_Host.cshtml
@@ -11,7 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blogs.Jhray</title>
-    <base href="~/blogs/"/>
+    <base href="~/"/>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
