--- a/Blogs.Jhray/Pages/Memes.razor
+++ b/Blogs.Jhray/Pages/Memes.razor
@@ -1,7 +1,7 @@
-﻿@page "/fetchdata"
+﻿@page "/memes"
 @using Blogs.Jhray.Data
 @using Markdig
-@inherits FetchDataBase
+@inherits MemesBase
 <h1>Meme Driven Development</h1>
 
 @if (blogPosts == null)
