--- a/Blogs.Jhray/Shared/MainLayout.razor
+++ b/Blogs.Jhray/Shared/MainLayout.razor
@@ -6,6 +6,7 @@
 
 <div class="main">
     <div class="top-row bg-dark px-4">
+        <LoginDisplay />
         <button class="btn btn-outline-light" @onclick="@(() =>
             {
                 ToggleNavMenu();
