--- a/Blogs.Jhray/Shared/LoginDisplay.razor
+++ b/Blogs.Jhray/Shared/LoginDisplay.razor
@@ -6,7 +6,6 @@
         </form>
     </Authorized>
     <NotAuthorized>
-        <a href="Identity/Account/Register">Register</a>
-        <a href="Identity/Account/Login">Log in</a>
+        <a class="btn btn-outline-light" href="Identity/Account/Login">Log in</a>
     </NotAuthorized>
 </AuthorizeView>
