--- a/Blogs.Jhray/Areas/Identity/Pages/Shared/_loginPartial.cshtml
+++ b/Blogs.Jhray/Areas/Identity/Pages/Shared/_loginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using Blogs.Jhray.Areas.Identity.Data
+@inject SignInManager<BlogsJhrayUser> SignInManager
+@inject UserManager<BlogsJhrayUser> UserManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <ul class="navbar-nav">
