--- a/Blogs.Jhray/Shared/NavMenu.razor.css
+++ b/Blogs.Jhray/Shared/NavMenu.razor.css
@@ -40,6 +40,21 @@
         line-height: 3rem;
     }
 
+    .nav-item ul {
+        list-style:none;
+        display:flex;
+        padding-left:3px;
+    }
+
+        .nav-item ul:hover {
+            background-color: rgba(255,255,255,0.1);
+            color: white;
+        }
+
+    .nav-item ul li {
+        display: inline;
+    }
+
         .nav-item ::deep a.active {
             background-color: rgba(255,255,255,0.25);
             color: white;
@@ -49,6 +64,19 @@
             background-color: rgba(255,255,255,0.1);
             color: white;
         }
+
+        .nav-item ul ::deep a:hover {
+            
+        }
+
+    .nav-item ul li ::deep a {
+        color: #d7d7d7;
+        border-radius: 4px 4px 4px 4px;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        line-height: 3rem;
+    }
 
 
 
