--- a/Blogs.Jhray/Pages/Shared/_Layout.cshtml
+++ b/Blogs.Jhray/Pages/Shared/_Layout.cshtml
@@ -7,15 +7,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Blogs.Jhray</title>
+    <title>Blogs</title>
     <link rel="stylesheet" href="~/Identity/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/Identity/css/site.css" />
+    <link href="~/jhray.ico" rel="shortcut icon" type="image/x-icon" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light navbar-toggleable-sm bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-dark navbar-toggleable-sm text-light bg-dark border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" href="~/">Blogs.Jhray</a>
+                <a class="navbar-brand" href="~/">Blogs</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,7 +47,7 @@
     </div>
     <footer class="footer border-top text-muted">
         <div class="container">
-            &copy; 2020 - Blogs.Jhray - <a asp-area="" asp-page="Privacy">Privacy</a>
+            &copy; 2020 - Jhray's Blogs - <a asp-area="" asp-page="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/Identity/lib/jquery/dist/jquery.min.js"></script>
