--- a/Blogs.Jhray/Pages/_Host.cshtml
+++ b/Blogs.Jhray/Pages/_Host.cshtml
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blogs.Jhray</title>
+    <title>Blogs</title>
     <base href="~/" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
@@ -19,6 +19,7 @@
     <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="Blogs.Jhray.styles.css" rel="stylesheet" />
+    <link href="~/jhray.ico" rel="shortcut icon" type="image/x-icon"/>
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
