--- a/Blogs.Jhray/Shared/LoginDisplay.razor
+++ b/Blogs.Jhray/Shared/LoginDisplay.razor
@@ -1,8 +1,7 @@
 ﻿<AuthorizeView>
     <Authorized>
-        @*<a href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</a>*@
         <form method="post" action="Identity/Account/LogOut">
-            <button type="submit" class="nav-link btn btn-link">Log out</button>
+            <button type="submit" class="btn btn-outline-light">Log out</button>
         </form>
     </Authorized>
     <NotAuthorized>
