--- a/Blogs.Jhray/Shared/MainLayout.razor.css
+++ b/Blogs.Jhray/Shared/MainLayout.razor.css
@@ -67,7 +67,7 @@
     align-items: center;
 }
 
-    .top-row ::deep a, .top-row .btn-link {
+    .top-row ::deep a, .top-row .btn-link, .top-row ::deep form {
         white-space: nowrap;
         margin-left: 1.5rem;
     }
