Minimizing the scaffolded code and adding 'me only' policy for editing blogs

--- a/Blogs.Jhray/Shared/NavMenu.razor
+++ b/Blogs.Jhray/Shared/NavMenu.razor
@@ -10,7 +10,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <AuthorizeView>
+            <AuthorizeView Policy="content-creator">
                 <Authorized>
                     <ul>
                         <li>
