--- a/Blogs.Jhray/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Blogs.Jhray/Areas/Identity/Pages/Account/Login.cshtml
@@ -30,7 +30,7 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
+                    <button type="submit" class="loginbutton btn btn-primary">Log in</button>
                 </div>
             </form>
         </section>
@@ -39,4 +39,8 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+}
+
+@section Styles {
+    <link href="@Url.Content("~/css/Login.cshtml.css")" rel="stylesheet" type="text/css" />
 }
