--- a/Blogs.Jhray/Pages/Shared/_Layout.cshtml
+++ b/Blogs.Jhray/Pages/Shared/_Layout.cshtml
@@ -54,5 +54,6 @@
     <script src="~/Identity/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/Identity/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
+    @RenderSection("Styles", required: false)
 </body>
 </html>
