--- a/Blogs.Jhray/Shared/BlogNav.razor
+++ b/Blogs.Jhray/Shared/BlogNav.razor
@@ -7,7 +7,7 @@
                 </NavLink>
             </li>
             <li class="modify">
-                <NavLink class="nav-link" href="memes">
+                <NavLink class="nav-link" href="memes/add">
                     <span class="oi oi-plus" aria-hidden="true"></span>
                 </NavLink>
             </li>
