--- a/Blogs.Jhray/Pages/Memes/Memes.razor
+++ b/Blogs.Jhray/Pages/Memes/Memes.razor
@@ -3,11 +3,11 @@
 @using Markdig
 @inherits MemesBase
 
-<div class="blog-header jumbotron jumbotron-fluid" style="background-color:mintcream; padding-bottom:5px">
+<div class="blog-header jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-4">Meme Driven Development</h1>
         <hr/>
-        <p class="lead" style="font-style:oblique">A blog well suited for members of the hidden society.</p>
+        <p class="lead">A blog well suited for members of the hidden society.</p>
     </div>
 </div>
 <div class="blog container">
@@ -22,16 +22,19 @@ else
     @foreach (var blogPost in blogPosts.OrderByDescending(d => d.PublishDate))
     {
     <div class="post mb-4">
-        <h2 class="post-title">@blogPost.Title</h2>
-        <h3 class="post-subtitle">@blogPost.Subtitle</h3>
         @if (ShowManageWorkflow)
         {
         <AuthorizeView Policy="content-creator">
-            <button class="btn btn-danger" @onclick="() => DeletePostById(blogPost.Id)">-</button>
+            <div class="manage-console">
+                <button class="btn btn-danger delete-btn" @onclick="() => DeletePostById(blogPost.Id)">␡</button>
+                <button class="btn btn-warning edit-btn" @onclick="() => EditPostById(blogPost.Id)">✎</button>
+            </div>
         </AuthorizeView>
         }
+        <h2 class="post-title">@blogPost.Title</h2>
+        <h3 class="post-subtitle">@blogPost.Subtitle</h3>    
         @((MarkupString) Markdown.ToHtml(blogPost.Content))
-        <hr/>
+        <hr />
     </div>
     }
 }
