--- a/Blogs.Jhray/Pages/Memes/BlogContainer.razor.css
+++ b/Blogs.Jhray/Pages/Memes/BlogContainer.razor.css
@@ -1,15 +1,5 @@
-﻿body {
-}
-
-.manage-console {
+﻿.manage-console {
     position: absolute;
-}
-
-.blog-header {
-    text-align: center;
-    padding-top: 15px;
-    background-color: mintcream;
-    padding-bottom: 5px;
 }
 
 .post-title {
@@ -24,6 +14,3 @@
     margin-bottom: 30px;
 }
 
-.lead {
-    font-style: oblique;
-}
