Finishing tonight's work, using dapper, fixing up block quotes and working on perf

--- a/Blogs.Jhray/Pages/Index.razor
+++ b/Blogs.Jhray/Pages/Index.razor
@@ -2,4 +2,4 @@
 @using Blogs.Jhray.Pages.Memes
 @page "/"
 
-<BlogContainer ShowId="13"></BlogContainer>
+<BlogContainer @ref="BlogContainer" AutoLoad="false" ShowId="RandomId"></BlogContainer>
