--- a/Blogs.Jhray/Pages/Memes/BlogContainer.razor
+++ b/Blogs.Jhray/Pages/Memes/BlogContainer.razor
@@ -4,11 +4,7 @@
 @inherits BlogContainerBase
 
 <div class="blog container">
-    @if (blogPosts == null)
-    {
-        <p><em>Loading...</em></p>
-    }
-    else
+    @if (blogPosts != null)
     {
         @foreach (var blogPost in blogPosts.OrderByDescending(d => d.PublishDate))
         {
