switching off prerendering on server

--- a/Blogs.Jhray/Pages/Index.razor
+++ b/Blogs.Jhray/Pages/Index.razor
@@ -2,4 +2,4 @@
 @using Blogs.Jhray.Pages.Memes
 @page "/"
 
-<BlogContainer @ref="BlogContainer" AutoLoad="false" ShowId="RandomId"></BlogContainer>
+<BlogContainer @ref="BlogContainer" ShowId="RandomId"></BlogContainer>
