--- a/Blogs.Jhray/Pages/_Host.cshtml
+++ b/Blogs.Jhray/Pages/_Host.cshtml
@@ -22,7 +22,7 @@
     <link href="~/jhray.ico" rel="shortcut icon" type="image/x-icon"/>
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <component type="typeof(App)" render-mode="Server" />
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
