--- a/Blogs.Jhray/Shared/NavMenu.razor
+++ b/Blogs.Jhray/Shared/NavMenu.razor
@@ -6,7 +6,7 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span>Blogs
+                <i class="fas fa-home" aria-hidden="true"></i>Blogs
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -15,7 +15,7 @@
         <AuthorizeView Policy="content-creator">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="AddBlog" Match="NavLinkMatch.All">
-                    <span class="oi oi-plus" aria-hidden="true"></span>Add Blog
+                    <i class="fas fa-plus" aria-hidden="true"></i>Add Blog
                 </NavLink>
             </li>
         </AuthorizeView>
