--- a/Blogs.Jhray/Pages/_Host.cshtml
+++ b/Blogs.Jhray/Pages/_Host.cshtml
@@ -12,14 +12,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blogs</title>
     <base href="~/" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
+    
+    <environment include="Development">
+        <link rel="stylesheet" href="lib/css/all.min.css">
+        <link rel="stylesheet" href="lib/css/bootstrap.min.css">
+        <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
+        <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
+        <link href="css/site.css" rel="stylesheet" />
+        <link href="Blogs.Jhray.styles.css" rel="stylesheet" />
 
-    <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
-    <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
-    <link href="css/site.css" rel="stylesheet" />
-    <link href="Blogs.Jhray.styles.css" rel="stylesheet" />
-    <link href="~/jhray.ico" rel="shortcut icon" type="image/x-icon"/>
+        <script src="lib/js/jquery.min.js"></script>
+        <script src="lib/js/popper.min.js"></script>
+        <script src="lib/js/bootstrap.min.js"></script>
+        <script src="_content/Blazorise/blazorise.js"></script>
+        <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link href="Blogs.Jhray.styles.css" rel="stylesheet" />
+        <script src="js/site.min.js"></script>
+    </environment>
+    <link href="~/jhray.ico" rel="shortcut icon" type="image/x-icon" />
+
+
+
+
 </head>
 <body>
     <component type="typeof(App)" render-mode="Server" />
@@ -34,12 +51,6 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-    <script src="_content/Blazorise/blazorise.js"></script>
-    <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
