--- a/Blogs.Jhray/Shared/BlogNav.razor
+++ b/Blogs.Jhray/Shared/BlogNav.razor
@@ -3,19 +3,19 @@
         <ul>
             <li class="first">
                 <NavLink class="nav-link" href="memes">
-                    <span class="oi oi-dollar" aria-hidden="true"></span>Memes
+                    <i class="fas fa-dollar-sign" aria-hidden="true"></i>Memes
                 </NavLink>
             </li>
             <li class="modify">
                 <NavLink class="nav-link" href="memes/add">
-                    <span class="oi oi-plus" aria-hidden="true"></span>
+                    <i class="fas fa-plus" aria-hidden="true"></i>
                 </NavLink>
             </li>
         </ul>
     </Authorized>
     <NotAuthorized>
         <NavLink class="nav-link" href="memes">
-            <span class="oi oi-dollar" aria-hidden="true"></span>Memes
+            <i class="fas fa-dollar-sign" aria-hidden="true"></i>Memes
         </NavLink>
     </NotAuthorized>
 </AuthorizeView>
