--- a/Blogs.Jhray/Shared/MainLayout.razor.css
+++ b/Blogs.Jhray/Shared/MainLayout.razor.css
@@ -20,7 +20,7 @@
         font-size: 1.1rem;
     }
 
-    .sidebar .oi {
+    .sidebar .fas {
         width: 2rem;
         font-size: 1.1rem;
         vertical-align: text-top;
