--- a/Blogs.Jhray/Pages/_Host.cshtml
+++ b/Blogs.Jhray/Pages/_Host.cshtml
@@ -28,7 +28,7 @@
         <script src="_content/Blazorise.Bootstrap/blazorise.bootstrap.js"></script>
     </environment>
     <environment exclude="Development">
-        <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/site.min.css" />
         <link href="Blogs.Jhray.styles.css" rel="stylesheet" />
         <script src="js/site.min.js"></script>
     </environment>
