--- a/Blogs.Jhray/Shared/BlogNav.razor
+++ b/Blogs.Jhray/Shared/BlogNav.razor
@@ -3,7 +3,7 @@
         <ul>
             <li class="first">
                 <NavLink class="nav-link" href="memes">
-                    <i class="fas fa-dollar-sign" aria-hidden="true"></i>Memes
+                    <i class="fas fa-memory" aria-hidden="true"></i>Memes
                 </NavLink>
             </li>
             <li class="modify">
@@ -15,7 +15,7 @@
     </Authorized>
     <NotAuthorized>
         <NavLink class="nav-link" href="memes">
-            <i class="fas fa-dollar-sign" aria-hidden="true"></i>Memes
+            <i class="fas fa-memory" aria-hidden="true"></i>Memes
         </NavLink>
     </NotAuthorized>
 </AuthorizeView>
