--- a/Blogs.Jhray/Shared/NavMenu.razor
+++ b/Blogs.Jhray/Shared/NavMenu.razor
@@ -10,7 +10,12 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <BlogNav/>
+            <NavLink class="nav-link" href="villages">
+                <i class="fas fa-dungeon" aria-hidden="true"></i>Villages
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <BlogNav />
         </li>
         <AuthorizeView Policy="content-creator">
             <li class="nav-item px-3">
