--- a/Blogs.Jhray/Pages/Villages/Dashboard.razor.css
+++ b/Blogs.Jhray/Pages/Villages/Dashboard.razor.css
@@ -1,3 +1,9 @@
 ﻿code {
     display:block;
 }
+.village-log {
+    overflow: auto;
+    height: 20vh;
+    background-color: #024;
+    resize: both;
+}
