Creating Persistence Project to handle EF

--- a/Blogs.Jhray/Areas/Identity/Pages/Account/LogOut.cshtml
+++ b/Blogs.Jhray/Areas/Identity/Pages/Account/LogOut.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @using Microsoft.AspNetCore.Identity
-@using Blogs.Jhray.Database.Entities
+@using Blogs.Jhray.Persistence.Database.Entities
 @attribute [IgnoreAntiforgeryToken]
 @inject SignInManager<BlogsJhrayUser> SignInManager
 @functions {
