--- a/Blogs.Jhray/Areas/Identity/Pages/Shared/_loginPartial.cshtml
+++ b/Blogs.Jhray/Areas/Identity/Pages/Shared/_loginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using Blogs.Jhray.Database.Entities
+@using Blogs.Jhray.Persistence.Database.Entities
 @inject SignInManager<BlogsJhrayUser> SignInManager
 @inject UserManager<BlogsJhrayUser> UserManager
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
