--- a/Blogs.Jhray/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Blogs.Jhray/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using Blogs.Jhray.Areas.Identity
 @using Blogs.Jhray.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Blogs.Jhray.Database.Entities
+@using Blogs.Jhray.Persistence.Database.Entities
