--- a/Blogs.Jhray/Pages/Index.razor
+++ b/Blogs.Jhray/Pages/Index.razor
@@ -1,8 +1,6 @@
-﻿@inherits IndexBase
-@using Blogs.Jhray.Pages.Memes
+﻿@using Blogs.Jhray.Pages.BlogContent
 @page "/"
-
 <i class="fas fa-hand-point-left" @onclick="() => GetPost(GetPostOpt.Previous)"></i>
 <i class="fas fa-random" @onclick="() => GetPost(GetPostOpt.Random)"></i>
 <i class="fas fa-hand-point-right" @onclick="() => GetPost(GetPostOpt.Next)"></i>
-<BlogContainer @ref="BlogContainer" ShowId="LatestPostId"></BlogContainer>
+<BlogContainer @ref="BlogContainer" ShowId="LatestPostId" BlogId="1"></BlogContainer>
