--- a/Blogs.Jhray/_Imports.razor
+++ b/Blogs.Jhray/_Imports.razor
@@ -5,7 +5,9 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using Blogs.Jhray
-@using Blogs.Jhray.Shared
 @using Blazorise
-
+@using Markdig
+@using Blogs.Jhray
+@using Blogs.Jhray.Pages
+@using Blogs.Jhray.Areas
+@using Blogs.Jhray.Shared
