--- a/Blogs.Jhray/Pages/_Host.cshtml
+++ b/Blogs.Jhray/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace Blogs.Jhray.Pages
+@namespace Blogs.Jhray 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
