--- a/Blogs.Jhray/Shared/NavMenu.razor
+++ b/Blogs.Jhray/Shared/NavMenu.razor
@@ -14,9 +14,12 @@
                 <i class="fas fa-dungeon" aria-hidden="true"></i>Villages
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <BlogNav />
-        </li>
+        @foreach (var blog in Blogs)
+        {
+            <li class="nav-item px-3">
+                <BlogNav BlogNavigation="@blog.HomeUrl" />
+            </li>
+        }
         <AuthorizeView Policy="content-creator">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="AddBlog" Match="NavLinkMatch.All">
@@ -26,6 +29,3 @@
         </AuthorizeView>
     </ul>
 </div>
-
-@code {
-}
