Switching to Rust forever

--- a/Blogs.Jhray/Pages/Index.razor
+++ b/Blogs.Jhray/Pages/Index.razor
@@ -3,4 +3,4 @@
 <i class="fas fa-hand-point-left" @onclick="() => GetPost(GetPostOpt.Previous)"></i>
 <i class="fas fa-random" @onclick="() => GetPost(GetPostOpt.Random)"></i>
 <i class="fas fa-hand-point-right" @onclick="() => GetPost(GetPostOpt.Next)"></i>
-<BlogContainer @ref="BlogContainer" ShowId="LatestPostId" BlogId="1"></BlogContainer>
+<BlogContainer @ref="BlogContainer" ShowId="LatestPostId"></BlogContainer>
