--- a/Blogs.Jhray/Pages/BlogContent/Home.razor
+++ b/Blogs.Jhray/Pages/BlogContent/Home.razor
@@ -4,7 +4,7 @@
 @if (_isFound)
 {
     <BlogHeader Title="@Blog.Title" LeadIn="@Blog.LeadIn" />
-    <BlogContainer BlogId="@Blog.Id" />
+    <BlogContainer BlogId="@Blog.Id" @ref="BlogContainer" AutoLoad="true"/>
 }
 else
 {
